[project]
name = "aiverify_partial_dependence_plot"
version = "0.10.0"
description = ""
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = ["numpy==1.26.4", "scipy==1.14.1"]
requires-python = ">=3.10,<3.12"

[project.optional-dependencies]
dev = [
    "test-engine-core[dev] @ {root:parent:parent:parent:parent:uri}/test-engine-core",
]

[project.scripts]
aiverify_partial_dependence_plot = "aiverify_partial_dependence_plot.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
