[project]
name = "aiverify-partial-dependence-plot"
description = "AI Verify implementation of Partial Dependence Plot (PDP) that explains how each feature and its feature value contribute to the predictions."
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = ["numpy==1.26.4", "scipy==1.14.1", "aiverify-test-engine>=2.0.1"]
requires-python = ">=3.10,<3.12"
dynamic = ["version"]

[project.scripts]
aiverify_partial_dependence_plot = "aiverify_partial_dependence_plot.__main__:main"

[tool.hatch.version]
path = "aiverify_partial_dependence_plot/algo.meta.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
