[project]
name = "aiverify_robustness_toolbox"
description = "AI Verify Robustness Toolbox generates a perturbed dataset using boundary attack algorithm on the test dataset."
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "joblib==1.4.2",
    "scikit-learn==1.5.2",
    "pillow===10.4.0",
]
requires-python = ">=3.10,<3.12"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "aiverify-test-engine[dev] @ {root:parent:parent:parent:parent:uri}/aiverify-test-engine",
]

[project.scripts]
aiverify_robustness_toolbox = "aiverify_robustness_toolbox.__main__:main"

[tool.hatch.version]
path = "aiverify_robustness_toolbox/algo.meta.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
