[project]
name = "aiverify_shap_toolbox"
version = "0.10.0"
description = ""
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = ["numpy==1.24.3", "pandas==2.0.3", "joblib==1.3.2", "scikit-learn==1.4.0", "setuptools==69.0.3", "xgboost==2.0.3", "scipy==1.12.0", "shap==0.44.1"]
requires-python = ">=3.10,<3.12"

[project.optional-dependencies]
dev = [
    "test-engine-core @ {root:parent:parent:parent:parent:uri}/test-engine-core",
]

[project.scripts]
aiverify_shap_toolbox = "aiverify_shap_toolbox.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
