[project]
name = "aiverify_shap_toolbox"
description = "AI Verify SHAP Toolbox provides SHAP (SHapley Additive exPlanations) methods to explain the output of machine learning models."
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "joblib==1.4.2",
    "scikit-learn==1.5.2",
    "xgboost==2.1.1",
    "scipy==1.14.1",
    "shap==0.46.0",
]
requires-python = ">=3.10,<3.12"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "aiverify-test-engine[dev] @ {root:parent:parent:parent:parent:uri}/aiverify-test-engine",
]

[project.scripts]
aiverify_shap_toolbox = "aiverify_shap_toolbox.__main__:main"

[tool.hatch.version]
path = "aiverify_shap_toolbox/algo.meta.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
